[gd_scene load_steps=8 format=3 uid="uid://dykldjtame0cu"]

[ext_resource type="Script" path="res://interface/structures_picker/structures_picker.gd" id="1_tselq"]
[ext_resource type="PackedScene" uid="uid://3e0irntcxqhr" path="res://interface/structures_picker/structures_picker_item.tscn" id="2_3vkor"]
[ext_resource type="Theme" uid="uid://bsmiiccyqdgae" path="res://theme.tres" id="3_fw3gf"]

[sub_resource type="Animation" id="Animation_ma0t2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/VBoxContainer/Panel/Cover:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qqtvk"]
resource_name = "cover_hide"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/VBoxContainer/Panel/Cover:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_61jgm"]
resource_name = "cover_show"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/VBoxContainer/Panel/Cover:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_64obx"]
_data = {
"RESET": SubResource("Animation_ma0t2"),
"cover_hide": SubResource("Animation_qqtvk"),
"cover_show": SubResource("Animation_61jgm")
}

[node name="StructuresPicker" type="Control"]
custom_minimum_size = Vector2(210, 0)
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 210.0
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("3_fw3gf")
script = ExtResource("1_tselq")
StructuresListItemScene = ExtResource("2_3vkor")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Loadouts" type="OptionButton" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 1

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -2.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="Items" type="GridContainer" parent="MarginContainer/VBoxContainer/Panel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="StructuresListItem" parent="MarginContainer/VBoxContainer/Panel/ScrollContainer/Items" instance=ExtResource("2_3vkor")]
layout_mode = 2

[node name="StructuresListItem2" parent="MarginContainer/VBoxContainer/Panel/ScrollContainer/Items" instance=ExtResource("2_3vkor")]
layout_mode = 2

[node name="StructuresListItem3" parent="MarginContainer/VBoxContainer/Panel/ScrollContainer/Items" instance=ExtResource("2_3vkor")]
layout_mode = 2

[node name="Cover" type="Control" parent="MarginContainer/VBoxContainer/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/Panel/Cover"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.447059)

[node name="Icon" type="Control" parent="MarginContainer/VBoxContainer/Panel/Cover"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
mouse_filter = 1

[node name="Polygon2D" type="Polygon2D" parent="MarginContainer/VBoxContainer/Panel/Cover/Icon"]
position = Vector2(0, -3)
polygon = PackedVector2Array(3, -8, 3, 0, 8, 0, 0, 8, -8, 0, -3, 0, -3, -8)

[node name="Polygon2D2" type="Polygon2D" parent="MarginContainer/VBoxContainer/Panel/Cover/Icon"]
position = Vector2(0, -4)
polygon = PackedVector2Array(8, 7, 11, 7, 11, 15, 0, 15, -11, 15, -11, 7, -8, 7, -8, 12, 8, 12)

[node name="CoverHitbox" type="Button" parent="MarginContainer/VBoxContainer/Panel/Cover"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_64obx")
}

[connection signal="item_selected" from="MarginContainer/VBoxContainer/Loadouts" to="." method="_on_loadouts_item_selected"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Panel/Cover/CoverHitbox" to="." method="_on_cover_hitbox_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Panel/Cover/CoverHitbox" to="." method="_on_cover_hitbox_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Panel/Cover/CoverHitbox" to="." method="_on_cover_hitbox_pressed"]
